--- a/Style.css
+++ b/Style.css
@@ -2,99 +2,62 @@
   box-sizing: border-box;
 }
 
-body {
-
-}
-
-.container {
-  margin: 0 auto;
-  width: 375px;
-  border-top: 50px #000000;
-  background-color: #383838;
-}
-
 
 /** Header Info **/
-.header{
-font-family: 'Roboto', sans-serif;
-height: 44px;
-font-weight:200;
-color: #ACEBE7;
-padding-top: 15px;
-padding-bottom: 15px;}
+.status{
+  background-color: #383838;
+  margin: 0 auto;
+  width: 375px;
+  display: block;
+}
+nav{
+  margin: 0 auto;
+  width: 375px;
+  font-family: 'Roboto', sans-serif;
+  height: 44px;
+  font-weight:300;
+  color: #ACEBE7;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  background-color: #383838;}
 
-.headerfont {
-  display:inline-block;
+h1{
+  display: inline;
   text-align: center;
-  padding-left: 50px;
-  padding-right: 50px;
-  font-size: 22px}
+  padding: 0px 50px;
+  font-size: 22px;}
 
 .arrow {
   float: left;
-  display: inline-block;
   padding-left: 15px;}
 
 .filter {
   float: right;
-  display: inline-block;
   padding-right: 15px;}
 
-  /** Icon Info & Type **/
+/** All Content Except Header **/
+  .container {
+    margin: 0 auto;
+    width: 375px;
+    border-top: 50px #000000;
+    background-color: #383838;
+  }
 
-.bus {
-  float: left;
-  display:inline-block;
-  padding-left:15px;
-  padding-top: 15px;}
-
-
-.stop{
-  float: center;
-  display:inline-block;
-  padding-left: 135px;
-  padding-right: 101px;
-  padding-top: 15px; }
-
-.time {
-  float: right;
-  display:inline-block;
-  padding-right:15px;
-  padding-top: 15px;}
-
-.iconfont1 {font-family: 'Roboto Mono', sans-serif;
-    color: #ffffff;
-    font-size: 12px;
-    display: inline-block;
-    float: left;
-    padding-top: 5px;
-    padding-bottom: 15px;
-    padding-left: 15px;}
-
-.iconfont2 {font-family: 'Roboto Mono', sans-serif;
-    color: #ffffff;
-    font-size: 12px;
-    display: inline-block;
-    float: center;
-    padding-top: 5px;
-    padding-bottom: 15px;
-    padding-left: 105px;}
-
-.iconfont3 {font-family: 'Roboto Mono', sans-serif;
-    color: #ffffff;
-    font-size: 12px;
-    display: inline-block;
-    float: right;
-    padding-top: 5px;
-    padding-bottom: 15px;
-    padding-right: 15px;}
+  .NextBus{
+    font-family: 'Roboto', sans-serif;
+    font-size: 22px;
+    height: 50px;
+    font-weight:300;
+    color: #ACEBE7;
+    text-align: center;
+    padding: 15px 0px 15px;}
 
     /** Timetable Section**/
 
-.content {background-color: #ffffff;
-border:1px solid #ACEBE7;}
+article{background-color: #ffffff;
+border-bottom:1px solid #ACEBE7;}
 
-.heading {font-family: 'Roboto Mono', sans-serif;
+h2{font-family: 'Roboto', sans-serif;
 font-size: 16px;
 font-weight: bold;
 text-align: center;
@@ -103,272 +66,53 @@ padding-bottom: 10px;
 color: #383838;}
 
 /** Eastbond Section **/
+article{padding-bottom: 10px;}
 
-.line1 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 60px;
-color: #383838;}
+.number{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 17px;
+  text-align: left;
+  display: inline-block;
+  padding-left: 15px;
+  padding-top: 0px;
+}
 
-.destination1 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-left: 5px;
-color: #383838;}
+.arrival{
+  font-family: 'Roboto', sans-serif;
+  font-size: 17px;
+  font-weight: 500;
+  float: right;
+  display: inline-block;
+  padding-right: 15px;
+  padding-top: 0px;
+}
 
-.time1 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 25px;
-padding-bottom: 15px;
-padding-right: 15px;
-color: #383838;}
+.destination{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  text-align: left;
+  display: block;
+  padding-top: 5px;
+  padding-left: 15px;
+  font-size: 15px;
+}
 
-
-.line2 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 65px;
-color: #383838;}
-
-.destination2 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-left: 25px;
-color: #383838;}
-
-.time2 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-bottom: 15px;
-padding-right: 15px;
-padding-left: 65px
-color: #383838;}
-
-/** Northbond Section **/
-
-.line3 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 50px;
-color: #383838;}
-
-.destination3 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-left: 25px;
-color: #383838;}
-
-.time3 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 15px;
-color: #383838;}
-
-/** Southbond Section **/
-
-.line4 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 45px;
-color: #383838;}
-
-.destination4 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 10px;
-padding-left: 10px;
-color: #383838;}
-
-.time4 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 15px;
-color: #383838;}
-
-.line5 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 65px;
-color: #383838;}
-
-.destination5 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-left: 25px;
-color: #383838;}
-
-.time5 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-bottom: 15px;
-padding-right: 15px;
-color: #383838;}
-
-/** Reroute Section **/
-
-.line6 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 50px;
-color: #383838;}
-
-.destination6 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-left: 10px;
-color: #383838;}
-
-.time6 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 15px;
-color: #383838;}
-
-/** Out of Service Section **/
-
-.line7 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 80px;
-color: #383838;}
-
-.destination7 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 10px;
-padding-left: 10px;
-color: #383838;}
-
-.time7 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 15px;
-color: #383838;}
-
-.line8 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 95px;
-color: #383838;}
-
-.destination8 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: center;
-display: inline-block;
-padding-bottom: 10px;
-padding-left: 10px;
-color: #383838;}
-
-.time8 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 10px;
-padding-right: 15px;
-color: #383838;}
-
-.line9 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-text-align: left;
-display: inline-block;
-padding-left: 15px;
-padding-bottom: 15px;
-padding-right: 55px;
-color: #383838;}
-
-.destination9 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: center;
-display: inline-block;
-padding-bottom: 15px;
-padding-right: 50px
-color: #383838;}
-
-.time9 {font-family: 'Roboto Mono', sans-serif;
-font-weight:lighter;
-font-size: 12px;
-float: right;
-display: inline-block;
-padding-left: 0px;
-padding-bottom: 15px;
-padding-right: 15px;
-color: #383838;}
+.frequency{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  text-align: left;
+  display: inline-block;
+  padding-top: 15px;
+  padding-left: 15px;
+  font-size: 12px;
+}
+.Next2{
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  float: right;
+  display: inline-block;
+  padding-top: 15px;
+  padding-right: 15px;
+  font-size: 12px;
+}
